# Project-Management

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  app.py  pyproject.toml  requirements.txt  seed_db.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
src/: database.py  ui.py
tests/: test_database.py
