[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project-management-pmo"
version = "0.1.0"
description = "A strategic PMO dashboard with Streamlit and SQLite"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Cline", email = "cline@example.com"},
]
dependencies = [
    "streamlit>=1.20.0",
    "pandas>=2.0.0",
    "plotly>=5.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
